[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/earth.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]

[node name="main" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="earth" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 256 )
scale = Vector2( 1.375, 1.375 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 7, 597 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 1021, 593 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 1026, 4 )
